hphp/test/zend/good/ext/sockets/tests/socket_connect_error.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('sockets')) {
  echo 'skip sockets extension not available.';
}
}
